welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: ';' expected but ')' found.
	else while (a!=b && a!=c) return 1)
                                          ^